--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "fs-store": "^0.3.1"
+    "fs-store": "^0.3.1",
+    "moment": "^2.24.0"
   },
   "nodemonConfig": {
     "ignore": [
